added method for admin area to get user object and edit
